Use solarized theme

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,4 +1,3 @@
-# command prefix (like screen)
 new-session
 # basic settings
 set-window-option -g mode-keys emacs
@@ -8,7 +7,7 @@ set-window-option -g mode-mouse on # disable mouse
 
 # move tmux copy buffer into x clipboard
 #bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
-
+set -g default-terminal "screen-256color"
 # splitting and cycling
 set-option -g mouse-select-pane on
 bind C-j previous-window
