Add couple of stuff in fish config and powerline (unconf)

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,4 +1,5 @@
-new-session
+#new-session
+
 # basic settings
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
@@ -17,17 +18,6 @@ bind C-k next-window
 set-option -g set-titles on
 set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
 set-window-option -g automatic-rename on # auto name
-
-# messages
-#set-window-option -g mode-bg magenta
-#set-window-option -g mode-fg black
-#set-option -g message-bg magenta
-
-#set-option -g message-fg black
-
-# No visual activity
-#set -g visual-activity off
-#set -g visual-bell off
 
 #next tab
 bind-key -n C-right next
@@ -51,3 +41,65 @@ set-window-option -g window-status-current-fg white
 # clock
 #set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
+
+bind-key = select-layout main-vertical
+bind < resize-pane -L 25
+bind > resize-pane -R 25
+
+# Allows for faster key repetition
+set -s escape-time 0
+
+# Set status bar
+set -g status-bg colour250
+set -g status-fg black
+# Highlight active window
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg black
+
+set-window-option -g window-status-bell-bg black
+set-window-option -g window-status-bell-fg colour248
+
+set -g status-interval 1
+
+# messages should linger for more than 750ms
+set-option display-time 2500
+
+setw -g aggressive-resize on
+
+# apps should know that this is 'screen' and not xterm. Slight compatibility
+# reasons. tmux should be running in xterm-256colors, and set TERM so that
+# applications within tmux see screen-256colors tmux does not support -bce
+# (background color erase)
+set -g default-terminal 'screen-256color'
+
+
+######
+
+
+# hostname on left
+#set -g status-left-length 40
+#set -g status-left '#[bg=colour254] #(echo `hostname` | tr a-z A-Z) '
+
+# load date time on right
+#set -g status-right-length 80
+#set -g status-right "  #[fg=colour236]%d-%m-%Y #[fg=black]%H:%M:%S "
+#set -g status-right "#(uptime) "
+#set -g status-right "#[fg=colour240] #(date) "
+
+#set -g window-status-format ' #S:#I.#P #T '
+#set -g window-status-current-format ' #S:#I.#P #T '
+
+
+#set -g set-titles on
+#set -g set-titles-string "#T"
+
+# mouse to scroll buffer
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set -g mouse-resize-pane on
+
+# less invasive, better place for clock etc (at end, new command will stop loading if not found...)
+#set -g status-position top
+
+source '/home/vagrant/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
