Add poweline install

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -102,4 +102,5 @@ set -g mouse-resize-pane on
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
 #set -g status-position top
 
-source '/home/vagrant/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+#source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
