--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,4 +1,4 @@
-#new-session
+new-session
 
 # basic settings
 set-window-option -g mode-keys emacs
@@ -102,5 +102,5 @@ set -g mouse-resize-pane on
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
 #set -g status-position top
 
-source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+source '/usr/local/lib/python2.7/dist-packages/Powerline-beta-py2.7.egg/powerline/bindings/tmux/powerline.conf'
 #source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
