--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -47,7 +47,7 @@ bind < resize-pane -L 25
 bind > resize-pane -R 25
 
 # Allows for faster key repetition
-set -s escape-time 0
+#set -s escape-time 0
 
 # Set status bar
 set -g status-bg colour250
