--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,39 +1,22 @@
-new-session
-
 # basic settings
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 set-window-option -g utf8 on # utf8 support
-set-window-option -g mode-mouse on # disable mouse
 
-# move tmux copy buffer into x clipboard
-#bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
-set -g default-terminal "screen-256color"
-# splitting and cycling
-set-option -g mouse-select-pane on
-bind C-j previous-window
-bind C-k next-window
 
 # window title
 set-option -g set-titles on
-set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
 set-window-option -g automatic-rename on # auto name
 
-#next tab
+# cycling windowws / tab
+bind C-j previous-window
+bind C-k next-window
 bind-key -n C-right next
-
-#previous tab
 bind-key -n C-left prev
 
 # status bar
 set-option -g status-utf8 on
-set-option -g status-justify right
-set-option -g status-bg black
-set-option -g status-fg cyan
-set-option -g status-interval 5
-set-option -g status-left-length 30
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
+
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
@@ -100,7 +83,8 @@ set -g mouse-select-window on
 set -g mouse-resize-pane on
 
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
-#set -g status-position top
+set -g status-position top
 
-source '/usr/local/lib/python2.7/dist-packages/Powerline-beta-py2.7.egg/powerline/bindings/tmux/powerline.conf'
+source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+#source '/usr/local/lib/python2.7/dist-packages/Powerline-beta-py2.7.egg/powerline/bindings/tmux/powerline.conf'
 #source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
