Fix xterm-mouse in emacs

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -45,7 +45,7 @@ set-window-option -g window-status-bell-fg colour248
 set -g status-interval 1
 
 # messages should linger for more than 750ms
-set-option display-time 2500
+set-option -g display-time 2500
 
 setw -g aggressive-resize on
 
@@ -57,7 +57,7 @@ set -g default-terminal 'screen-256color'
 
 
 ######
-
+bind-key b send-prefix
 
 # hostname on left
 #set -g status-left-length 40
