--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -3,6 +3,10 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 set-window-option -g utf8 on # utf8 support
 
+# edit config
+bind e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
 
 # window title
 set-option -g set-titles on
@@ -20,6 +24,8 @@ set-option -g status-utf8 on
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
+
+bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # clock
 #set-window-option -g clock-mode-colour cyan
@@ -83,8 +89,11 @@ set -g mouse-select-window on
 set -g mouse-resize-pane on
 
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
-set -g status-position top
+set -g status-position bottom
 
-source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+source /Users/guillaume/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf
 #source '/usr/local/lib/python2.7/dist-packages/Powerline-beta-py2.7.egg/powerline/bindings/tmux/powerline.conf'
 #source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
+set-window-option -g mode-keys emacs
+set-option -g status-keys emacs
