--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -97,3 +97,12 @@ source /Users/guillaume/Library/Python/2.7/lib/python/site-packages/powerline/bi
 
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
+
+#set -g status-right-length 80
+set -g status-right "  #[fg=colour236]%d-%m-%Y #[fg=black]%H:%M:%S "
+set -g status-right "#(uptime) "
+set -g status-right "#(istats cpu | sed 's#C .*#C#') #[fg=#AAAAAA]%d-%m-%Y #[fg=#CCCCCC]%H:%M:%S"
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
