--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -3,20 +3,29 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 set-window-option -g utf8 on # utf8 support
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # edit config
-bind e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind C-h new-window 'htop'
+bind C-p new-window 'ping 8.8.8.8'
+bind C-d new-window 'dig google.com; sleep 4'
+bind C-e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
+bind C-f command-prompt -p find-session 'switch-client -t %%'
+bind C-n command-prompt -p new-session 'new-session -s %%'
 
 
 # window title
 set-option -g set-titles on
 set-window-option -g automatic-rename on # auto name
 
-# cycling windowws / tab
-bind C-j previous-window
-bind C-k next-window
-bind-key -n C-right next
-bind-key -n C-left prev
+bind -n Home choose-tree
+# cycling windows
+bind -n S-right next
+bind -n S-left prev
+# cycling sessions
+bind -n S-Up switch-client -p
+bind -n S-Down switch-client -n
 
 # status bar
 set-option -g status-utf8 on
@@ -25,7 +34,6 @@ set-option -g visual-activity on
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
 
-bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # clock
 #set-window-option -g clock-mode-colour cyan
@@ -64,6 +72,7 @@ set -g default-terminal 'screen-256color'
 
 ######
 bind-key b send-prefix
+#set -g base-index 1
 
 # hostname on left
 #set -g status-left-length 40
@@ -91,7 +100,8 @@ set -g mouse-resize-pane on
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
 set -g status-position bottom
 
-source /Users/guillaume/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#source /Users/guillaume/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf
 #source '/usr/local/lib/python2.7/dist-packages/Powerline-beta-py2.7.egg/powerline/bindings/tmux/powerline.conf'
 #source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
@@ -99,10 +109,12 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
 #set -g status-right-length 80
-set -g status-right "  #[fg=colour236]%d-%m-%Y #[fg=black]%H:%M:%S "
-set -g status-right "#(uptime) "
-set -g status-right "#(istats cpu | sed 's#C .*#C#') #[fg=#AAAAAA]%d-%m-%Y #[fg=#CCCCCC]%H:%M:%S"
+#set -g status-right "  #[fg=colour236]%d-%m-%Y #[fg=black]%H:%M:%S "
+#set -g status-right "#(uptime) "
+#set -g status-right "#(uptime) #[fg=#AAAAAA]%m-%d-%Y #[fg=#CCCCCC]%H:%M:%S"
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+set-option -g history-limit 900000
