--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -13,6 +13,7 @@ bind C-d new-window 'dig google.com; sleep 4'
 bind C-e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 bind C-n command-prompt -p new-session 'new-session -s %%'
+bind C-s set synchronize-panes
 
 
 # window title
