--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -3,7 +3,7 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 set-window-option -g utf8 on # utf8 support
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -93,10 +93,12 @@ bind-key b send-prefix
 #set -g set-titles-string "#T"
 
 # mouse to scroll buffer
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-set -g mouse-resize-pane on
+set -g mouse on
+## Deprecated tmux < 1.9.1 mouse support
+#set -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
+#set -g mouse-resize-pane on
 
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
 set -g status-position bottom
