Add helm and switch theme

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -68,7 +68,7 @@ setw -g aggressive-resize on
 # reasons. tmux should be running in xterm-256colors, and set TERM so that
 # applications within tmux see screen-256colors tmux does not support -bce
 # (background color erase)
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'xterm-256color'
 
 
 ######
