--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -1,7 +1,7 @@
 # basic settings
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
-set-window-option -g utf8 on # utf8 support
+#set-window-option -g utf8 on # utf8 support
 
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 
@@ -29,7 +29,7 @@ bind -n S-Up switch-client -p
 bind -n S-Down switch-client -n
 
 # status bar
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
