--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
 # basic settings
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
-#set-window-option -g utf8 on # utf8 support
 
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 
@@ -14,7 +13,6 @@ bind C-e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux sou
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 bind C-n command-prompt -p new-session 'new-session -s %%'
 bind C-s set synchronize-panes
-
 
 # window title
 set-option -g set-titles on
@@ -29,15 +27,11 @@ bind -n S-Up switch-client -p
 bind -n S-Down switch-client -n
 
 # status bar
-#set-option -g status-utf8 on
-
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
 
-
 # clock
-#set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
 
 bind-key = select-layout main-vertical
@@ -72,50 +66,21 @@ set -g default-terminal 'xterm-256color'
 
 
 ######
+# Recursive tmux.
 bind-key b send-prefix
-#set -g base-index 1
-
-# hostname on left
-#set -g status-left-length 40
-#set -g status-left '#[bg=colour254] #(echo `hostname` | tr a-z A-Z) '
-
-# load date time on right
-#set -g status-right-length 80
-#set -g status-right "  #[fg=colour236]%d-%m-%Y #[fg=black]%H:%M:%S "
-#set -g status-right "#(uptime) "
-#set -g status-right "#[fg=colour240] #(date) "
-
-#set -g window-status-format ' #S:#I.#P #T '
-#set -g window-status-current-format ' #S:#I.#P #T '
-
-
-#set -g set-titles on
-#set -g set-titles-string "#T"
+# Start window indexes at 1 instead of 0.
+set -g base-index 1
 
 # mouse to scroll buffer
 set -g mouse on
-## Deprecated tmux < 1.9.1 mouse support
-#set -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-select-window on
-#set -g mouse-resize-pane on
 
 # less invasive, better place for clock etc (at end, new command will stop loading if not found...)
 set -g status-position bottom
 
+# Laod powerline.
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-#source /Users/guillaume/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf
-#source '/usr/local/lib/python2.7/dist-packages/Powerline-beta-py2.7.egg/powerline/bindings/tmux/powerline.conf'
-#source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
-set-window-option -g mode-keys emacs
-set-option -g status-keys emacs
-
-#set -g status-right-length 80
-#set -g status-right "  #[fg=colour236]%d-%m-%Y #[fg=black]%H:%M:%S "
-#set -g status-right "#(uptime) "
-#set -g status-right "#(uptime) #[fg=#AAAAAA]%m-%d-%Y #[fg=#CCCCCC]%H:%M:%S"
-
+# Default to current dir for now panes/winodws.
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
