Add reattach namespace for pbpaste/copy in tmux
Signed-off-by: Guillaume J. Charmes <gcharmes@leaf.ag>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
