Lower tmux history line number.
Signed-off-by: Maxime Legaignoux <maxime.lgx@gmail.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ bind -n S-Up switch-client -p
 bind -n S-Down switch-client -n
 
 # status bar
-set-option -g visual-activity on
+set-option -g visual-activity off
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
 
@@ -85,7 +85,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-set-option -g history-limit 900000
+set-option -g history-limit 5000
 
 # Enable scroll.
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
