--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -78,6 +78,7 @@ set -g mouse on
 set -g status-position bottom
 
 # Laod powerline.
+run-shell "powerline-daemon -q"
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Default to current dir for now panes/winodws.
