--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,3 +92,8 @@ set-option -g history-limit 900000
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+
+
+# Test
+#bind C-t new-window 'cd /Users/gcharmes/go/src/bitbucket.org/mlcloud/app-services-api/functions/graph_dal && mvn  -Dtest=DALRequestTest test; read'
+bind C-t send-keys -t "mvn:mvn.0" C-z 'mvn  -Dtest=DALRequestTest test' Enter
