--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,12 +2,19 @@
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+set-window-option -g pane-border-status top
+#set-option -g pane-border-format "#W:#P #T #{pane_current_command}"
+
+# Auto auto windows ids.
+set-option -g renumber-windows on
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 bind C-h new-window 'htop'
 bind C-p new-window 'ping 8.8.8.8'
+bind C-l new-window 'TMUX=/tmp/foo source ~/.zshrc; echo Locked.; lock'
 bind C-d new-window 'dig google.com; sleep 4'
 bind C-e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
 bind C-f command-prompt -p find-session 'switch-client -t %%'
@@ -15,8 +22,11 @@ bind C-n command-prompt -p new-session 'new-session -s %%'
 bind C-s set synchronize-panes
 
 # window title
-set-option -g set-titles on
-set-window-option -g automatic-rename on # auto name
+set-option -g set-titles off
+set-window-option -g automatic-rename on
+bind / command-prompt -I "" "select-pane -T '%%'"
+
+bind c command-prompt -I "" "new-window -c '#{pane_current_path}' -n '%%'"
 
 bind -n Home choose-tree
 # cycling windows
@@ -27,8 +37,8 @@ bind -n S-Up switch-client -p
 bind -n S-Down switch-client -n
 
 # status bar
-set-option -g visual-activity on
-set-window-option -g monitor-activity on
+set-option -g visual-activity off
+set-window-option -g monitor-activity off
 set-window-option -g window-status-current-fg white
 
 # clock
@@ -58,16 +68,9 @@ set-option -g display-time 2500
 
 setw -g aggressive-resize on
 
-# apps should know that this is 'screen' and not xterm. Slight compatibility
-# reasons. tmux should be running in xterm-256colors, and set TERM so that
-# applications within tmux see screen-256colors tmux does not support -bce
-# (background color erase)
-set -g default-terminal 'xterm-256color'
-
-
 ######
 # Recursive tmux.
-bind-key b send-prefix
+#bind-key b send-prefix
 # Start window indexes at 1 instead of 0.
 set -g base-index 1
 
@@ -78,22 +81,21 @@ set -g mouse on
 set -g status-position bottom
 
 # Laod powerline.
-run-shell "powerline-daemon -q"
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#run-shell "powerline-daemon -q"
+#source ~/.local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf
+#source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+source ~/.tmux-themepack/powerline/double/orange.tmuxtheme
 
 # Default to current dir for now panes/winodws.
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
 
 set-option -g history-limit 900000
 
 # Enable scroll.
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+#bind -n WheelDownPane select-pane -t= \; send-keys -M
+#bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 
-
-# Test
-#bind C-t new-window 'cd /Users/gcharmes/go/src/bitbucket.org/mlcloud/app-services-api/functions/graph_dal && mvn  -Dtest=DALRequestTest test; read'
-bind C-t send-keys -t "mvn:mvn.0" C-z 'mvn  -Dtest=DALRequestTest test' Enter
+set -g default-terminal "xterm-truecolor"
+set -g terminal-overrides ",xterm-truecolor:Tc"
