--- a/.config/powerline/config.json
+++ b/.config/powerline/config.json
@@ -1,32 +1,33 @@
 {
-	"common": {
-		"term_truecolor": false
+    "common": {
+	"term_escape_style": "xterm",
+	"term_truecolor": true
+    },
+    "ext": {
+	"ipython": {
+	    "colorscheme": "default",
+	    "theme": "in",
+	    "local_themes": {
+		"rewrite": "rewrite",
+		"out": "out",
+		"in2": "in2"
+	    }
 	},
-	"ext": {
-		"ipython": {
-			"colorscheme": "default",
-			"theme": "in",
-			"local_themes": {
-				"rewrite": "rewrite",
-				"out": "out",
-				"in2": "in2"
-			}
-		},
-		"pdb": {
-			"colorscheme": "default",
-			"theme": "default"
-		},
-		"shell": {
-			"colorscheme": "default",
-			"theme": "default",
-			"local_themes": {
-				"continuation": "continuation",
-				"select": "select"
-			}
-		},
-		"tmux": {
-			"colorscheme": "default",
-			"theme": "default"
-		}
+	"pdb": {
+	    "colorscheme": "default",
+	    "theme": "default"
+	},
+	"shell": {
+	    "colorscheme": "default",
+	    "theme": "default",
+	    "local_themes": {
+		"continuation": "continuation",
+		"select": "select"
+	    }
+	},
+	"tmux": {
+	    "colorscheme": "default",
+	    "theme": "default"
 	}
+    }
 }
