--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,12 @@
 # basic settings
+set-option -g default-shell /usr/bin/zsh
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Enable truecolors.
+set -g default-terminal "xterm-truecolor"
+set -g terminal-overrides ",xterm-truecolor:Tc"
+
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -14,81 +18,146 @@ bind C-f command-prompt -p find-session 'switch-client -t %%'
 bind C-n command-prompt -p new-session 'new-session -s %%'
 bind C-s set synchronize-panes
 
-# window title
+# Enable pane border.
+set-window-option -g pane-border-status top
+
+# Auto auto windows ids.
+set-option -g renumber-windows on
+
+# Window titles.
 set-option -g set-titles on
-set-window-option -g automatic-rename on # auto name
+set-window-option -g automatic-rename on # Auto rename window/pane.
 
 bind -n Home choose-tree
-# cycling windows
+# Cycling windows.
 bind -n S-right next
 bind -n S-left prev
-# cycling sessions
+# Cycling sessions.
 bind -n S-Up switch-client -p
 bind -n S-Down switch-client -n
 
-# status bar
+# Status bar.
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
 
-# clock
+# Clock.
 set-window-option -g clock-mode-style 12
 
 bind-key = select-layout main-vertical
 bind < resize-pane -L 25
 bind > resize-pane -R 25
 
-# Allows for faster key repetition
-#set -s escape-time 0
-
-# Set status bar
+# Set status bar.
 set -g status-bg colour250
 set -g status-fg black
-# Highlight active window
+
+# Highlight active window.
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-bg black
 
 set-window-option -g window-status-bell-bg black
 set-window-option -g window-status-bell-fg colour248
 
-set -g status-interval 1
+# Faster statusbar refresh.
+set -g status-interval 15
 
-# messages should linger for more than 750ms
+# Messages should linger for more than 750ms.
 set-option -g display-time 2500
 
 setw -g aggressive-resize on
 
-# apps should know that this is 'screen' and not xterm. Slight compatibility
-# reasons. tmux should be running in xterm-256colors, and set TERM so that
-# applications within tmux see screen-256colors tmux does not support -bce
-# (background color erase)
-set -g default-terminal 'xterm-256color'
-
-
-######
-# Recursive tmux.
-bind-key b send-prefix
 # Start window indexes at 1 instead of 0.
 set -g base-index 1
 
-# mouse to scroll buffer
+# Mouse to scroll buffer.
 set -g mouse on
 
-# less invasive, better place for clock etc (at end, new command will stop loading if not found...)
+# Less invasive, better place for clock etc (at end, new command will stop loading if not found...).
 set -g status-position bottom
 
-# Laod powerline.
-run-shell "powerline-daemon -q"
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-
-# Default to current dir for now panes/winodws.
+# Default to current dir for now panes/windows.
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-set-option -g history-limit 900000
+set-option -g history-limit 50000
 
-# Enable scroll.
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+# Load powerline.
+run-shell "powerline-daemon -q"
+source /home/creack/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+# Blue theme.
+
+# Status update interval
+set -g status-interval 1
+
+# Basic status bar colors
+set -g status-style fg=colour238,bg=colour233
+
+# Left side of status bar
+set -g status-left-style bg=colour233,fg=colour243
+#set -g status-left-length 100
+#set -g status-left "#[fg=colour232,bg=colour24,bold] #S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+
+# Right side of status bar
+set -g status-right-style bg=colour233,fg=colour243
+#set -g status-right-length 150
+#set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour24,bg=colour240]#[fg=colour232,bg=colour24,bold] #H "
+
+# Window status
+set -g window-status-format "  #I:#W#F  "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#P:#W#F #[fg=colour233,bg=black,nobold]"
+
+# Current window status
+set -g window-status-current-style bg=colour24,fg=colour233
+
+# Window with activity status
+set -g window-status-activity-style bg=colour233,fg=colour245
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify centre
+
+# Pane border
+set -g pane-border-style bg=default,fg=colour238
+
+# Active pane border
+set -g pane-active-border-style bg=default,fg=colour24
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour24
+set -g clock-mode-style 24
+
+# Message
+set -g message-style bg=colour24,fg=black
+
+# Command message
+set -g message-command-style bg=colour233,fg=black
+
+# Mode
+set -g mode-style bg=colour24,fg=colour231
+
+## ! Blue theme.
+
+# Plugin manager.
+set -g @plugin 'tmux-plugins/tpm'
+
+# Plugin list.
+
+# Directory side nav.
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'tree -C'
+
+# Themepack.
+#set -g @plugin 'jimeh/tmux-themepack'
+#set -g @themepack 'powerline/double/blue'
+
+# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
