--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,6 @@ set-option -g status-keys emacs
 set -g default-terminal "xterm-truecolor"
 set -g terminal-overrides ",xterm-truecolor:Tc"
 
-
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 bind C-h new-window 'htop'
@@ -85,7 +84,7 @@ set-option -g history-limit 50000
 
 # Load powerline.
 run-shell "powerline-daemon -q"
-source /home/creack/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /home/guillaume/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Blue theme.
 
@@ -145,19 +144,3 @@ set -g message-command-style bg=colour233,fg=black
 set -g mode-style bg=colour24,fg=colour231
 
 ## ! Blue theme.
-
-# Plugin manager.
-set -g @plugin 'tmux-plugins/tpm'
-
-# Plugin list.
-
-# Directory side nav.
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -C'
-
-# Themepack.
-#set -g @plugin 'jimeh/tmux-themepack'
-#set -g @themepack 'powerline/double/blue'
-
-# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
