use ~ for path in tmux conf
Signed-off-by: Guillaume J. Charmes <gcharmes@magicleap.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,8 @@ set-option -g history-limit 50000
 
 # Load powerline.
 run-shell "powerline-daemon -q"
-source /home/guillaume/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+source ~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Blue theme.
 
