--- a/.gitconfig
+++ b/.gitconfig
@@ -1,27 +1,30 @@
 [alias]
-	ci      = commit
-	co      = checkout
-	st      = status -sb
-	b       = branch
-	merge   = merge --no-ff --no-commit
-	lg1     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold white)— %an%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
-	lg2     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %an%C(reset)' --abbrev-commit
-	lg3     = !"git log --show-signature"
-	lg      = !"git lg1"
-	pull    = pull --rebase
-	change  = codereview change
-	gofmt   = codereview gofmt
-	mail    = codereview mail
-	pending = codereview pending
-	submit  = codereview submit
-	sync    = codereview sync
+  ci      = commit
+  co      = checkout
+  st      = status -sb
+  b       = branch
+  merge   = merge --no-ff --no-commit
+  lg1     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold white)— %an%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
+  lg2     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %an%C(reset)' --abbrev-commit
+  lg3     = !"git log --show-signature"
+  lg      = !"git lg1"
+  pull    = pull --rebase
+  change  = codereview change
+  gofmt   = codereview gofmt
+  mail    = codereview mail
+  pending = codereview pending
+  submit  = codereview submit
+  sync    = codereview sync
 
 [color]
-	ui          = auto
-	interactive = true
-	branch      = true
-	diff        = true
-	status      = true
+  ui          = auto
+  interactive = true
+  branch      = true
+  diff        = true
+  status      = true
+
+[merge]
+  tool = ediff
 
 [include]
-    path = ~/.gitconfig.perso
+  path = ~/.gitconfig.perso
