Cleanup bootstrap process
Signed-off-by: Guillaume J. Charmes <git+guillaume@charmes.net>

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,9 @@
   ci      = commit
   co      = checkout
   st      = status -sb
+  sti     = status -sb --ignored
   b       = branch
-  merge   = merge --no-ff --no-commit
+  merge   = merge --no-commit
   lg1     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold white)— %an%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
   lg2     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %an%C(reset)' --abbrev-commit
   lg3     = !"git log --show-signature"
