Add osx support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # basic settings
 set-option -g default-shell /usr/bin/zsh
+#set-option -g default-shell /usr/local/bin/zsh
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
@@ -86,6 +87,7 @@ set-option -g history-limit 50000
 run-shell "powerline-daemon -q"
 
 source ~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
+#source /usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Blue theme.
 
