--- a/.gitconfig
+++ b/.gitconfig
@@ -29,3 +29,7 @@
 
 [include]
   path = ~/.gitconfig.perso
+[url "git@github.com:"]
+	insteadOf = https://github.com/
+[url "git@bitbucket.org:"]
+	insteadOf = https://bitbucket.org/
