--- a/.ssh/config
+++ b/.ssh/config
@@ -3,3 +3,5 @@ Include ~/.ssh/config.private
 Host *
      AddKeysToAgent yes
      ForwardAgent   yes
+     ServerAliveInterval 60
+     ServerAliveCountMax 5
