--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
 # Enable truecolors.
-set -g default-terminal "xterm-truecolor"
-set -g terminal-overrides ",xterm-truecolor:Tc"
+set -g default-terminal "xterm-direct"
+set -g terminal-overrides ",xterm-direct:Tc"
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -66,7 +66,7 @@ set -g base-index 1
 set -g mouse on
 
 # Less invasive, better place for clock etc (at end, new command will stop loading if not found...).
-set -g status-position bottom
+set -g status-position top
 
 # Default to current dir for now panes/windows.
 bind '"' split-window -c "#{pane_current_path}"
