Stage conf before moving to org
Signed-off-by: Guillaume J. Charmes <gcharmes@magicleap.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
 # Enable truecolors.
-set -g default-terminal "xterm-direct"
-set -g terminal-overrides ",xterm-direct:Tc"
+set -g default-terminal "xterm-truecolor"
+set -g terminal-overrides ",xterm-truecolor:Tc"
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
