--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
   lg2     = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %an%C(reset)' --abbrev-commit
   lg3     = !"git log --show-signature"
   lg      = !"git lg1"
+  cz      = commit --author 'hbd <zak@urfav.dev>' --no-gpg-sign -p -m
 
   change  = codereview change
   gofmt   = codereview gofmt
