default to xterm-256color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
 # Enable truecolors.
-set -g default-terminal "xterm-truecolor"
-set -g terminal-overrides ",xterm-truecolor:Tc"
+set -g default-terminal "xterm-256color"
+set -g terminal-overrides ",xterm-256color:Tc"
 
 # edit config
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
