Fix tmux config to work in both linux and darwin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,13 @@
-# basic settings
-set-option -g default-shell /usr/bin/zsh
-#set-option -g default-shell /usr/local/bin/zsh
+# Os specific settings.
+if-shell -b '[ "$(uname -s)" = "Linux" ]' " \
+  set -g default-shell /usr/bin/zsh; \
+  set -g status-position top; \
+"
+if-shell -b '[ "$(uname -s)" = "Darwin" ]' " \
+  set -g default-shell /usr/local/bin/zsh; \
+  set -g status-position bottom; \
+"
+
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
 
@@ -8,7 +15,7 @@ set-option -g status-keys emacs
 set -g default-terminal "xterm-256color"
 set -g terminal-overrides ",xterm-256color:Tc"
 
-# edit config
+# Edit tmux config and load it when done.
 bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 bind C-h new-window 'htop'
 bind C-p new-window 'ping 8.8.8.8'
@@ -65,9 +72,6 @@ set -g base-index 1
 # Mouse to scroll buffer.
 set -g mouse on
 
-# Less invasive, better place for clock etc (at end, new command will stop loading if not found...).
-set -g status-position top
-
 # Default to current dir for now panes/windows.
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -78,8 +82,8 @@ set-option -g history-limit 50000
 # Load powerline.
 run-shell "powerline-daemon -q"
 
-source ~/.local/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
-#source /usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
+# Lookup the powerline path and load  the tmux bindings.
+run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
 
 # Blue theme.
 
